Fixed jcanvas alignment issue

--- a/AV/Development/twoThreeTreeCON.css
+++ b/AV/Development/twoThreeTreeCON.css
@@ -13,7 +13,7 @@
 }
 
 /* Removes top margin from array objects to make the diagram a litle more compact */
-#twoThreeTreeCON .jsavarray {
+.jsavarray {
 	margin-top: 0; 
 }
 
